# osgPairo

./: CMakeLists.txt  README.rst
applications/osgpango-gr-cache/: CMakeLists.txt  osgpango-gr-cache.cpp
etc/: FindosgCairo.cmake
etc/docs/: demo.cpp
examples/osgpangoanimation/: CMakeLists.txt  osgpangoanimation.cpp
examples/osgpangobenchmark/: CMakeLists.txt  ConvertPangoText.cpp  ConvertPangoText.h  osgpangobenchmark.cpp
examples/osgpangocomplexrenderer/: CMakeLists.txt  osgpangocomplexrenderer.cpp
examples/osgpangodistancefield/: CMakeLists.txt  osgpangodistancefield.cpp
examples/osgpangofonts/: CMakeLists.txt  osgpangofonts.cpp
examples/osgpangoglsl/: CMakeLists.txt  osgpangoglsl.cpp
examples/osgpangoguiviewer/: CMakeLists.txt  osgpangoguiviewer.cpp
examples/osgpangosimplerenderer/: CMakeLists.txt  osgpangosimplerenderer.cpp
examples/osgpangothreaded/: CMakeLists.txt  osgpangothreaded.cpp
examples/osgpangoupdatecb/: CMakeLists.txt  osgpangoupdatecb.cpp
examples/osgpangovertical/: CMakeLists.txt  osgpangovertical.cpp
examples/osgpangoviewer/: CMakeLists.txt  osgpangoviewer.cpp
include/osgPairo/: Context  DistanceFieldText  Export  Glyph  GlyphLayer  GlyphLayerInterface  GlyphRenderer  Image  Notify  ReadFile  Serialize  ShaderGenerator  ShaderManager  String  Text  TextTransform  Util  Version  VerticalText
include/osgPango3/: Context  DistanceFieldText  Export  Glyph  GlyphLayer  GlyphLayerInterface  GlyphRenderer  ShaderManager  TextTransform  Util  Version  VerticalText
src/: Context.cpp  DistanceFieldText.cpp  Glyph.cpp  GlyphLayer.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  ShaderGenerator.cpp  ShaderManager.cpp  Text.cpp  TextTransform.cpp  Util.cpp  VerticalText.cpp
src/cairorocks/: cairocks.h  distance-field.cpp  emboss.cpp  gaussian-blur.cpp  gif-surface.cpp  invert.cpp  map-path-onto.cpp  named-path.cpp  rounded.cpp  surface-from-jpeg.cpp
src/core/: Context.cpp  Glyph.cpp  GlyphLayer.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  Image.cpp  ReadFile.cpp  ShaderManager.cpp  Text.cpp  Util.cpp
src/layers/: Bevel.cpp  Bitmap.cpp  DistanceField.cpp  Outline.cpp  Shadow.cpp  ShadowBlur.cpp  ShadowInset.cpp
src/renderers/: Default.cpp  DistanceField.cpp  Outline.cpp  Shadow.cpp  ShadowBlur.cpp  ShadowInset.cpp
src/serializers/: Glyph.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  LibraryWrapper.cpp
src/serializers/renderers/: Default.cpp  Outline.cpp  Shadow.cpp
