PROJECT(osgpangoanimation)

LINK_LIBRARIES(osgPango
    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
)

ADD_EXECUTABLE(osgpangoanimation osgpangoanimation.cpp)

INSTALL(TARGETS osgpangoanimation DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
SET_TARGET_PROPERTIES(osgpangoanimation PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
