PROJECT(osgpangosimplerenderer)

LINK_LIBRARIES(${OSGPAIRO_LIBRARY_NAME}
    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
)

ADD_EXECUTABLE(osgpangosimplerenderer osgpangosimplerenderer.cpp)

INSTALL(TARGETS osgpangosimplerenderer DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
SET_TARGET_PROPERTIES(osgpangosimplerenderer PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
