PROJECT(osgpangovertical)

LINK_LIBRARIES(${OSGPAIRO_LIBRARY_NAME}
    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
)

ADD_EXECUTABLE(osgpangovertical osgpangovertical.cpp)

INSTALL(TARGETS osgpangovertical DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
SET_TARGET_PROPERTIES(osgpangovertical PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
